examples/apps/fruits-v2/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fruits-library
  labels:
    app: fruits-library
